# TheStanleyParableButtonRenamer

./: .gitignore  CMakeLists.txt  LICENCE  README.md  TSPR_bank.fsb  app.rc  main.cpp  uninstall.cpp
